# RustCompute

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
crates/ringkernel/: Cargo.toml  README.md
crates/ringkernel-audio-fft/: Cargo.toml  README.md
crates/ringkernel-audio-fft/examples/: audio_separator.rs  realtime_separator.rs
crates/ringkernel-audio-fft/src/: audio_input.rs  bin_actor.rs  error.rs  fft.rs  lib.rs  messages.rs  mixer.rs  processor.rs  separation.rs
crates/ringkernel-audio-fft/tests/: integration_test.rs
crates/ringkernel-cli/: Cargo.toml  README.md
crates/ringkernel-cli/src/: error.rs  main.rs  templates.rs
crates/ringkernel-cli/src/commands/: check.rs  codegen.rs  init.rs  mod.rs  new_project.rs  profile.rs
crates/ringkernel-codegen/: Cargo.toml  README.md
crates/ringkernel-codegen/src/: dsl_common.rs  lib.rs
crates/ringkernel-codegen/src/templates/: cuda.ptx.template  metal.msl.template  wgsl.template
crates/ringkernel-core/: Cargo.toml
crates/ringkernel-core/src/: __private.rs  actor.rs  alerting.rs  analytics_context.rs  audit.rs  auth.rs  backend_stub.rs  backpressure.rs  checkpoint.rs  cloud_storage.rs  config.rs  context.rs  control.rs  dispatcher.rs  dlq.rs  drain.rs  error.rs  health.rs  hlc.rs  hot_reload.rs  idempotency.rs  introspection.rs  k2k.rs  lib.rs  logging.rs  memory.rs  memory_pressure.rs  message.rs  multi_gpu.rs  observability.rs  persistent_message.rs  provenance.rs  queue.rs  rate_limiting.rs  rbac.rs  registry.rs  runtime.rs  runtime_context.rs  scheduling.rs  secrets.rs  (+9 more)
crates/ringkernel-core/src/benchmark/: regression.rs  statistics.rs
crates/ringkernel-core/src/hybrid/: dispatcher.rs  traits.rs
crates/ringkernel-core/src/k2k/: audit_tag.rs  mod.rs  tenant.rs
crates/ringkernel-core/src/resource/: system.rs
crates/ringkernel-core/tests/: spsc_two_thread_throughput.rs
crates/ringkernel-cpu/: Cargo.toml
crates/ringkernel-cpu/src/: kernel.rs  lib.rs  memory.rs  mock.rs  runtime.rs  simd.rs
crates/ringkernel-cuda/: Cargo.toml  README.md  build.rs
crates/ringkernel-cuda-codegen/: Cargo.toml  README.md
crates/ringkernel-cuda-codegen/src/: dsl.rs  handler.rs  intrinsics.rs  lib.rs  loops.rs  persistent_fdtd.rs  reduction_intrinsics.rs  ring_kernel.rs  shared.rs  stencil.rs  transpiler.rs  types.rs  validation.rs
crates/ringkernel-cuda-codegen/tests/: actor_codegen_integration.rs
crates/ringkernel-cuda/src/: cooperative.rs  device.rs  driver_api.rs  k2k_gpu.rs  kernel.rs  lib.rs  memory.rs  memory_pool.rs  persistent.rs  phases.rs  reduction.rs  runtime.rs  stencil.rs
crates/ringkernel-cuda/tests/: actor_lifecycle_proof.rs  cluster_launch.rs  cooperative_benchmark.rs  cuda_graphs_benchmark.rs  gpu_actor_integration.rs  gpu_execution_verify.rs  hierarchical_work_steal.rs  multi_stream_overlap.rs  paper_lifecycle_overhead.rs  paper_multi_gpu_k2k_bw.rs  paper_nvlink_migration.rs  paper_snapshot_restart.rs  paper_tier_latency.rs  streaming_pipeline_proof.rs  sustained_throughput.rs  warp_work_steal.rs
crates/ringkernel-derive/: Cargo.toml  README.md
crates/ringkernel-derive/src/: lib.rs
crates/ringkernel-derive/tests/: compile_fail_tests.rs  macro_tests.rs
crates/ringkernel-ecosystem/: Cargo.toml  README.md
crates/ringkernel-ecosystem/examples/: axum_persistent_api.rs
crates/ringkernel-ecosystem/src/: actix.rs  arrow.rs  axum.rs  candle.rs  config.rs  cuda_bridge.rs  enterprise.rs  error.rs  graphql.rs  grpc.rs  lib.rs  llm.rs  metrics.rs  ml_bridge.rs  persistent.rs  polars.rs  streaming.rs  tower.rs  tracing_ext.rs  wgpu_bridge.rs
crates/ringkernel-graph/: Cargo.toml  README.md
crates/ringkernel-graph/src/: lib.rs
crates/ringkernel-ir/: Cargo.toml  README.md
crates/ringkernel-ir/src/: builder.rs  capabilities.rs  error.rs  lib.rs  lower_cuda.rs  lower_msl.rs  lower_wgsl.rs  nodes.rs  optimize.rs  printer.rs  types.rs  validation.rs
crates/ringkernel-metal/: Cargo.toml  README.md
crates/ringkernel-metal/src/: device.rs  kernel.rs  lib.rs  memory.rs  runtime.rs
crates/ringkernel-montecarlo/: Cargo.toml  README.md
crates/ringkernel-montecarlo/src/: lib.rs
crates/ringkernel-procint/: Cargo.toml  README.md
crates/ringkernel-procint/benches/: kernel_benchmarks.rs
crates/ringkernel-procint/src/: error.rs  lib.rs
crates/ringkernel-python/: Cargo.toml  pyproject.toml
crates/ringkernel-python/src/: error.rs  lib.rs
crates/ringkernel-txmon/: Cargo.toml  README.md
crates/ringkernel-txmon/src/: error.rs  lib.rs
crates/ringkernel-wavesim/: Cargo.toml  PERFORMANCE.md  README.md
crates/ringkernel-wavesim/examples/: educational_modes.rs
crates/ringkernel-wavesim/src/: error.rs  lib.rs
crates/ringkernel-wavesim3d/: Cargo.toml  README.md
crates/ringkernel-wavesim3d/examples/: test_persistent.rs
crates/ringkernel-wavesim3d/src/: error.rs  lib.rs
crates/ringkernel-wgpu/: Cargo.toml  README.md
crates/ringkernel-wgpu-codegen/: Cargo.toml  README.md
crates/ringkernel-wgpu-codegen/src/: bindings.rs  dsl.rs  handler.rs  intrinsics.rs  lib.rs  loops.rs  ring_kernel.rs  shared.rs  stencil.rs  transpiler.rs  types.rs  u64_workarounds.rs  validation.rs
crates/ringkernel-wgpu/src/: actor_loop.rs  adapter.rs  kernel.rs  lib.rs  memory.rs  runtime.rs  shader.rs
crates/ringkernel-wgpu/tests/: wgpu_backend.rs
crates/ringkernel/benches/: README.md  academic_harness.rs  claims_validation.rs  hlc.rs  k2k_messaging.rs  latency.rs  memory_layout.rs  message_queue.rs  serialization.rs  startup.rs
crates/ringkernel/examples/: enterprise_runtime.rs  hello_kernel.rs  pagerank_reduction.rs  ping_pong.rs  vector_add.rs
crates/ringkernel/src/: lib.rs
crates/ringkernel/tests/: control_block.rs  cpu_backend.rs  cuda_backend.rs  hlc.rs  k2k_integration.rs
tools/gpu-playground/: Cargo.toml
tools/gpu-playground/src/: main.rs
tutorials/: Cargo.toml  README.md
tutorials/01-getting-started/: tutorial.rs
tutorials/02-message-passing/: tutorial.rs
tutorials/03-gpu-kernels/: tutorial.rs
tutorials/04-enterprise-features/: tutorial.rs
(+407 files in other folders)
