[package]
name = "ringkernel-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generation for RingKernel - generates GPU kernel source code"
keywords = ["gpu", "codegen", "cuda", "metal", "wgsl"]
categories = ["development-tools"]

[dependencies]
ringkernel-core = { workspace = true }

# Code generation
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Template processing
handlebars = "5.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
