[package]
name = "ringkernel-cuda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "CUDA backend for RingKernel - NVIDIA GPU support via cudarc"
keywords = ["gpu", "actor", "cuda", "nvidia"]
categories = ["hardware-support"]
readme = "README.md"

[dependencies]
ringkernel-core = { workspace = true }

# CUDA bindings - use cuda-12050 (API compatible with CUDA 13.0)
# Note: cudarc 0.11.x doesn't support CUDA 13.0 yet, but 12.5 API is compatible
cudarc = { version = "0.11", optional = true, features = ["cuda-12050"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Synchronization
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
# For GPU execution tests - needs cudarc directly
cudarc = { version = "0.11", features = ["cuda-12050"] }

[features]
default = []
cuda = ["cudarc"]
