[package]
name = "ringkernel-cuda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "CUDA backend for RingKernel - NVIDIA GPU support via cudarc"
keywords = ["gpu", "actor", "cuda", "nvidia"]
categories = ["hardware-support"]
readme = "README.md"
build = "build.rs"

[dependencies]
ringkernel-core = { workspace = true }

# CUDA bindings - auto-detect CUDA version from build system
cudarc = { version = "0.18.2", optional = true, features = ["cuda-version-from-build-system"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Synchronization
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
# For GPU execution tests - needs cudarc directly
cudarc = { version = "0.18.2", features = ["cuda-version-from-build-system"] }

[features]
default = []
cuda = ["cudarc"]
# Cooperative groups support - requires nvcc at build time for PTX compilation
# Enables grid-wide synchronization via cuLaunchCooperativeKernel
cooperative = ["cuda"]
