[package]
name = "ringkernel-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Procedural macros for RingKernel GPU-native actor system"
keywords = ["gpu", "actor", "macro", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true

[features]
default = []
cuda-codegen = ["dep:ringkernel-cuda-codegen"]

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
ringkernel-cuda-codegen = { workspace = true, optional = true }

[dev-dependencies]
ringkernel-core = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rkyv = { workspace = true }
bytemuck = { workspace = true }
inventory = { workspace = true }
