[package]
name = "ringkernel-ecosystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Ecosystem integrations for RingKernel - actors, web frameworks, data processing, ML"
keywords = ["gpu", "actor", "integration", "axum", "tower"]
categories = ["concurrency", "asynchronous", "web-programming"]
readme = "README.md"

[features]
default = []

# Persistent GPU kernel integration (core traits, no CUDA dependency)
persistent = ["dep:async-stream"]

# CUDA implementation of PersistentHandle
persistent-cuda = ["persistent", "dep:ringkernel-cuda"]

# Actor framework integrations
actix = ["dep:actix", "dep:actix-rt"]
tower = ["dep:tower", "dep:tower-service"]

# Web framework integrations
axum = ["dep:axum", "tower"]

# WebSocket support for Axum (streaming responses)
axum-ws = ["axum"]

# Server-Sent Events support for Axum (streaming responses)
axum-sse = ["axum", "dep:async-stream", "dep:serde_json", "persistent"]

# Data processing integrations
arrow = ["dep:arrow"]
polars = ["dep:polars"]

# Distributed computing
grpc = ["dep:tonic", "dep:prost", "dep:async-stream"]

# Machine learning
candle = ["dep:candle-core"]

# Configuration
config = ["dep:config"]

# Observability
tracing-integration = []
prometheus = ["dep:prometheus"]

# Full persistent ecosystem (persistent + web frameworks)
persistent-full = ["persistent-cuda", "actix", "axum", "axum-ws", "axum-sse", "grpc"]

# Full ecosystem (all integrations)
full = ["actix", "tower", "axum", "arrow", "polars", "grpc", "candle", "config", "tracing-integration", "prometheus", "persistent"]

[dependencies]
# Core ringkernel
ringkernel-core.workspace = true

# Always required
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
futures.workspace = true
parking_lot.workspace = true

# Standard library
serde = { version = "1.0", features = ["derive"] }
pin-project-lite.workspace = true

# Optional: Actor frameworks
actix = { version = "0.13", optional = true }
actix-rt = { version = "2.10", optional = true }
tower = { version = "0.5", optional = true }
tower-service = { version = "0.3", optional = true }

# Optional: Web frameworks
axum = { version = "0.8", optional = true }

# Optional: Data processing
arrow = { version = "54", optional = true }
polars = { version = "0.46", optional = true, default-features = false, features = ["lazy"] }

# Optional: gRPC
tonic = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }

# Optional: ML
candle-core = { version = "0.4", optional = true }

# Optional: Configuration
config = { version = "0.14", optional = true, default-features = false, features = ["toml"] }

# Optional: Metrics
prometheus = { version = "0.13", optional = true }

# Optional: Persistent kernel support (enables cuda feature for full functionality)
ringkernel-cuda = { workspace = true, optional = true, features = ["cuda"] }
async-stream = { version = "0.3", optional = true }

# Optional: SSE/JSON support
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[example]]
name = "axum_persistent_api"
path = "examples/axum_persistent_api.rs"
required-features = ["persistent", "axum", "axum-sse"]
