[package]
name = "ringkernel-graph"
version.workspace = true
edition.workspace = true
description = "GPU-accelerated graph algorithm primitives"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ringkernel/ringkernel"
keywords = ["gpu", "graph", "bfs", "cuda", "parallel"]
categories = ["science", "algorithms", "mathematics"]

[dependencies]
ringkernel-core = { version = "0.4.1", path = "../ringkernel-core" }
bytemuck = { workspace = true }
thiserror = { workspace = true }

# CUDA support (optional)
cudarc = { version = "0.18.2", optional = true, features = ["cuda-version-from-build-system"] }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[features]
default = []
cuda = ["cudarc"]
