[package]
name = "ringkernel-ir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Intermediate Representation for RingKernel GPU code generation"
readme = "README.md"
keywords = ["gpu", "ir", "codegen", "cuda", "wgsl"]
categories = ["compilers", "development-tools"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }

# For identifier interning
string-interner = "0.18"

# For graph algorithms on IR
petgraph = "0.7"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = []
# Enable detailed IR validation
validation = []
# Enable IR optimization passes
optimization = []
