[package]
name = "ringkernel-montecarlo"
version = "0.2.0"
edition = "2021"
description = "GPU-accelerated Monte Carlo primitives for variance reduction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ringkernel/ringkernel"
keywords = ["gpu", "monte-carlo", "variance-reduction", "cuda", "simulation"]
categories = ["science", "simulation", "mathematics"]

[dependencies]
ringkernel-core = { path = "../ringkernel-core", version = "0.2.0" }
bytemuck = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }

[dev-dependencies]
rand_xoshiro = "0.6"
criterion = { workspace = true }

[features]
default = []
