[package]
name = "ringkernel-montecarlo"
version.workspace = true
edition.workspace = true
description = "GPU-accelerated Monte Carlo primitives for variance reduction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ringkernel/ringkernel"
keywords = ["gpu", "monte-carlo", "variance-reduction", "cuda", "simulation"]
categories = ["science", "simulation", "mathematics"]

[dependencies]
ringkernel-core = { version = "0.3.2", path = "../ringkernel-core" }
bytemuck = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }

# CUDA support (optional)
cudarc = { version = "0.18.2", optional = true, features = ["cuda-version-from-build-system"] }

[dev-dependencies]
rand_xoshiro = "0.6"
criterion = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[features]
default = []
cuda = ["cudarc"]
