[package]
name = "ringkernel-procint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU-accelerated process intelligence with real-time DFG visualization and pattern detection"
keywords = ["gpu", "process-mining", "dfg", "conformance", "visualization"]
categories = ["visualization", "science", "simulation"]
readme = "README.md"

[dependencies]
# Core RingKernel dependencies
ringkernel-core = { version = "0.1.3", path = "../ringkernel-core" }
ringkernel-derive = { version = "0.1.3", path = "../ringkernel-derive" }
ringkernel-cpu = { version = "0.1.3", path = "../ringkernel-cpu" }
ringkernel-cuda-codegen = { version = "0.1.3", path = "../ringkernel-cuda-codegen", optional = true }
syn = { version = "2.0", features = ["full", "parsing"], optional = true }

# Async runtime
tokio = { version = "1.35", features = ["full", "sync", "time", "macros", "rt-multi-thread"] }
futures = "0.3"

# Serialization
rkyv = { version = "0.7", features = ["validation", "strict", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GUI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"
egui_plot = "0.29"

# Math and statistics
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.17"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "6.0"
env_logger = "0.11"
log = "0.4"

# Optional CUDA backend
ringkernel-cuda = { version = "0.1.3", path = "../ringkernel-cuda", optional = true, features = ["cuda"] }
cudarc = { version = "0.11", optional = true, features = ["cuda-12050"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[features]
default = []
cuda = ["ringkernel-cuda", "ringkernel-cuda-codegen", "syn", "cudarc"]

[[bin]]
name = "procint"
path = "src/bin/procint.rs"

[[bin]]
name = "procint-benchmark"
path = "src/bin/procint_benchmark.rs"

[[bench]]
name = "kernel_benchmarks"
harness = false
